# ros2_racecar

./: .gitignore  AGENTS.md  README.md  apt-get  frames.gv  go_docker.sh  jetson_run.sh  ros2_wsl_network.bash  talker.yaml
.agents/skills/project-sync/: SKILL.md
docs/: AI_SYNC.md  CURRENT_STATE.md  FIELD_PLAN_160CM.md  GAZEBO_PERFORMANCE.md  NEXT_PROMPT.md  ROS2_WSL_NETWORK.md  SYSTEM_ARCHITECTURE.md  TEST_EVIDENCE.md  WORKSPACE_MAP.md
src/: carrot_broadcaster.py  carrot_tf_listener.py  carrot_tf_listener.py.bak  go_docker.sh  lidar_obstacle_detector.py  lidar_sim.py  racing_planner_component.py  test_speed.py  time_travel_listener.py  turtle_control.py  turtle_sub.py
src/action_tutorials_interfaces/: CMakeLists.txt  package.xml
src/action_tutorials_interfaces/launch/: racing_system_launch.py
src/launch_tutorial/: setup.py
src/more_interfaces/: CMakeLists.txt
src/my_racecar_pkg/: package.xml  setup.cfg  setup.py
src/my_racecar_pkg/config/: racecar_params.yaml
src/my_racecar_pkg/launch/: example_main.launch.py  example_substitutions.launch.py  race_start_launch.py
src/my_racecar_pkg/my_racecar_pkg/: client.py  lidar_sim.py  lidar_tf.py  listener.py  odom_pub.py  service.py  static_turtle_tf2_broadcaster.py  talker.py  turtle_tf2_broadcaster.py  turtle_tf2_listener.py  udp_bridge_jetson.py
src/polygon_base/: CMakeLists.txt
src/polygon_base/include/polygon_base/: regular_polygon.hpp
src/polygon_base/src/: area_node.cpp
src/polygon_plugins/: CMakeLists.txt
src/polygon_plugins/src/: polygon_plugins.cpp
src/python_parameters/: setup.py
src/python_parameters/launch/: python_parameters_launch.py
src/python_parameters/python_parameters/: python_parameters_node.py
src/tutorial_interfaces/: CMakeLists.txt  package.xml
src/wro2026_mapper/: README.md  package.xml  setup.cfg  setup.py
src/wro2026_mapper/wro2026_mapper/: wro2026_mapper.py
src/wro2026_sim/: CMakeLists.txt  package.xml
src/wro2026_sim/config/: slam_params.yaml
src/wro2026_sim/launch/: mapping.launch.py  physical_bringup.launch.py  race.launch.py  wro2026_sim.launch.py  wro2026_step6_control.launch.py  wro2026_step6_lidar.launch.py
src/wro2026_sim/maps/: wro2026_map.pgm  wro2026_map.yaml
src/wro2026_sim/models/turtlebot3_burger_cam/: model.config  model.sdf
src/wro2026_sim/scripts/: gazebo_ground_truth_odom.py  line_detector.py  line_follower.py  wro2026_mapper.py
src/wro2026_sim/worlds/: wro2026_field.sdf  wro2026_obstacle_wide.sdf  wro2026_open_narrow.sdf  wro2026_open_wide.sdf
tools/: fix_lines.py
