<?xml version="1.0"?>
<package format="3">
  <name>wro2026_sim</name>
  <version>0.0.1</version>
  <description>WRO 2026 Future Engineers Simulation</description>
  <maintainer email="team@wro2026.com">WRO Team</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>turtlebot3_gazebo</exec_depend>
  <depend>ros_gz_bridge</depend>
  <depend>ros_gz_sim</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
